--- a/QR/Householder_QR_exercise.ipynb
+++ b/QR/Householder_QR_exercise.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -41,10 +39,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def householder(vec):\n",
@@ -66,14 +62,38 @@
     "    if vec.ndim != 1:\n",
     "        raise ValueError(\"vec.ndim = %s, expected 1\" % vec.ndim)\n",
     "    \n",
-    "    # ENTER YOUR CODE HERE"
+    "    # ENTER YOUR CODE HERE\n",
+    "    n = vec.shape[0]\n",
+    "    outvec = np.array([0]*n, dtype=np.float)\n",
+    "    outvec[0] = np.linalg.norm(vec)\n",
+    "    \n",
+    "    u = (vec - outvec)/np.linalg.norm(vec - outvec)\n",
+    "    u = np.expand_dims(u, axis=1)\n",
+    "\n",
+    "    H = np.eye(n, dtype=np.float) - 2*np.dot(u, np.transpose(u))\n",
+    "    \n",
+    "    return outvec, H"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "\nNot equal to tolerance rtol=1e-07, atol=0\n\n(mismatch 33.33333333333333%)\n x: array([ 3.741657e+00,  0.000000e+00, -1.110223e-16])\n y: array([3.741657, 0.      , 0.      ])",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-5ea4b5f69389>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0massert_allclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mh\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mv1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mv\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[0massert_allclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mh\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mv\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mv1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mD:\\Programs\\Anaconda\\lib\\site-packages\\numpy\\testing\\_private\\utils.py\u001b[0m in \u001b[0;36massert_allclose\u001b[1;34m(actual, desired, rtol, atol, equal_nan, err_msg, verbose)\u001b[0m\n\u001b[0;32m   1450\u001b[0m     \u001b[0mheader\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'Not equal to tolerance rtol=%g, atol=%g'\u001b[0m \u001b[1;33m%\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mrtol\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0matol\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1451\u001b[0m     assert_array_compare(compare, actual, desired, err_msg=str(err_msg),\n\u001b[1;32m-> 1452\u001b[1;33m                          verbose=verbose, header=header, equal_nan=equal_nan)\n\u001b[0m\u001b[0;32m   1453\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1454\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mD:\\Programs\\Anaconda\\lib\\site-packages\\numpy\\testing\\_private\\utils.py\u001b[0m in \u001b[0;36massert_array_compare\u001b[1;34m(comparison, x, y, err_msg, verbose, header, precision, equal_nan, equal_inf)\u001b[0m\n\u001b[0;32m    787\u001b[0m                                 \u001b[0mverbose\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mverbose\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mheader\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mheader\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    788\u001b[0m                                 names=('x', 'y'), precision=precision)\n\u001b[1;32m--> 789\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mAssertionError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    790\u001b[0m     \u001b[1;32mexcept\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    791\u001b[0m         \u001b[1;32mimport\u001b[0m \u001b[0mtraceback\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAssertionError\u001b[0m: \nNot equal to tolerance rtol=1e-07, atol=0\n\n(mismatch 33.33333333333333%)\n x: array([ 3.741657e+00,  0.000000e+00, -1.110223e-16])\n y: array([3.741657, 0.      , 0.      ])"
+     ]
+    }
+   ],
    "source": [
     "# Test (marked)\n",
     "\n",
@@ -86,10 +106,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "rndm = np.random.RandomState(1234)\n",
@@ -145,10 +163,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def qr_decomp(a):\n",
@@ -176,15 +192,24 @@
     "    a1 = np.array(a, copy=True, dtype=float)\n",
     "    m, n = a1.shape\n",
     "    \n",
-    "    # ENTER YOUR CODE HERE"
+    "    # ENTER YOUR CODE HERE\n",
+    "    Q = np.eye(m)\n",
+    "    R = np.array(a1, copy=True, dtype=float)\n",
+    "    \n",
+    "    for i in range(n):\n",
+    "        temp, H = householder(R[i:, i])\n",
+    "        H_i = np.eye(m)\n",
+    "        H_i[i:, i:] = H\n",
+    "        \n",
+    "        R = H_i.dot(R)\n",
+    "        Q = Q.dot(H_i.T)\n",
+    "    return Q, R"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Might want to turn this on for prettier printing: zeros instead of `1e-16` etc\n",
@@ -194,10 +219,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Test (marked)\n",
@@ -222,16 +245,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.13665049  0.53601299 -0.09369752  0.7697136   0.30459557]\n",
+      " [ 0.56035895  0.0935397  -0.53326881  0.01839528 -0.62652547]\n",
+      " [ 0.19725922  0.65948912  0.60068463 -0.32384673 -0.24589462]\n",
+      " [ 0.62498418 -0.50418303  0.52144688  0.28453698  0.04822969]\n",
+      " [ 0.48765568  0.12171264 -0.27224305 -0.47049398  0.67223293]] \n",
+      "\n",
+      " [[-0.13665049  0.53601299  0.09369752  0.661619   -0.49749149]\n",
+      " [-0.56035895  0.0935397   0.53326881 -0.52477245 -0.34276292]\n",
+      " [-0.19725922  0.65948912 -0.60068463 -0.37879015  0.14784752]\n",
+      " [-0.62498418 -0.50418303 -0.52144688  0.18967657 -0.21750907]\n",
+      " [-0.48765568  0.12171264  0.27224305  0.32774225  0.75222783]]\n",
+      "\n",
+      " [[ 1.40152769  1.2514379   0.89523615]\n",
+      " [ 0.          0.84158252  0.68447942]\n",
+      " [ 0.         -0.          0.5496046 ]\n",
+      " [ 0.          0.          0.        ]\n",
+      " [ 0.         -0.         -0.        ]] \n",
+      "\n",
+      " [[-1.40152769 -1.2514379  -0.89523615]\n",
+      " [ 0.          0.84158252  0.68447942]\n",
+      " [ 0.          0.         -0.5496046 ]\n",
+      " [ 0.          0.          0.        ]\n",
+      " [ 0.          0.          0.        ]]\n"
+     ]
+    }
+   ],
    "source": [
     "from scipy.linalg import qr\n",
     "qq, rr = qr(a)\n",
     "\n",
-    "assert_allclose(np.dot(qq, rr), a)"
+    "assert_allclose(np.dot(qq, rr), a)\n",
+    "\n",
+    "print(q, '\\n\\n', qq)\n",
+    "print('\\n', r, '\\n\\n', rr)"
    ]
   },
   {
@@ -245,7 +299,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Enter your explanation here (Russian or English, up to you)*"
+    "Signs are opposite, but they cancel each other when multiplied"
    ]
   },
   {
@@ -305,7 +359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
