--- a/LAB4/4.21.ipynb
+++ b/LAB4/4.21.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,9 +275,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.00997681 0.00984337 0.00971079 0.00957906 0.00944817 0.00931811\n",
+      " 0.00918889 0.0090605  0.00893292 0.00880617 0.00868022 0.00855508\n",
+      " 0.00843075 0.0083072  0.00818445 0.00806249 0.0079413  0.00782089\n",
+      " 0.00770125 0.00758238 0.00746426 0.00734691 0.0072303  0.00711444\n",
+      " 0.00699932 0.00688494 0.00677129 0.00665837 0.00654617 0.00643469]\n"
+     ]
+    }
+   ],
    "source": [
     "n = 30\n",
     "m = 6\n",
@@ -296,7 +308,8 @@
     "        A[i,j] = a(i + 1, j + 1)\n",
     "        \n",
     "b = np.array([t*q**i for i in range(1,n+1)])\n",
-    "x = np.linalg.solve(A,b)"
+    "x = np.linalg.solve(A,b)\n",
+    "print(x)"
    ]
   },
   {
@@ -308,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +332,7 @@
     "    c[i] = b[i] / A[i, i]\n",
     "    for j in range(n):\n",
     "        if i != j:\n",
-    "            B[i][j] = -A[i, i] / A[i, i]"
+    "            B[i][j] = -A[i, j] / A[i, i]"
    ]
   },
   {
@@ -331,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +356,7 @@
     "        x = np.dot(B, z) + c\n",
     "        x = x*w + z*(1 - w)\n",
     "        \n",
-    "        if (np.linalg.norm(x - z,np.inf) < e):\n",
+    "        if (np.linalg.norm(x - z, np.inf) < e):\n",
     "            return x, i+1   \n",
     "    return x, i+1"
    ]
@@ -357,22 +370,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.1\n",
-      "[1.61877771e+60 1.61877771e+60 1.61877771e+60 1.61877771e+60\n",
-      " 1.61877771e+60 1.61877771e+60 1.61877771e+60 1.61877771e+60\n",
-      " 1.61877771e+60 1.61877771e+60 1.61877771e+60 1.61877771e+60\n",
-      " 1.61877771e+60 1.61877771e+60 1.61877771e+60 1.61877771e+60\n",
-      " 1.61877771e+60 1.61877771e+60 1.61877771e+60 1.61877771e+60\n",
-      " 1.61877771e+60 1.61877771e+60 1.61877771e+60 1.61877771e+60\n",
-      " 1.61877771e+60 1.61877771e+60 1.61877771e+60 1.61877771e+60\n",
-      " 1.61877771e+60 1.61877771e+60]\n"
+      "0.46464646464646464\n",
+      "[0.0099758  0.00984244 0.00970994 0.00957828 0.00944747 0.00931749\n",
+      " 0.00918834 0.00906002 0.00893252 0.00880584 0.00867996 0.00855489\n",
+      " 0.00843063 0.00830715 0.00818447 0.00806257 0.00794145 0.0078211\n",
+      " 0.00770153 0.00758272 0.00746466 0.00734737 0.00723082 0.00711502\n",
+      " 0.00699996 0.00688564 0.00677205 0.00665918 0.00654704 0.00643561]\n"
      ]
     }
    ],
@@ -382,13 +392,14 @@
     "ls=[]\n",
     "\n",
     "for w in ws:\n",
+    "    #print(w)\n",
     "    x1, nm = rel(B, c, x + 1, w, 100, 1e-6)\n",
     "    ls.append(nm)\n",
     "\n",
     "index = ls.index(min(ls))\n",
     "w_opt = ws[index]\n",
     "print(w_opt)\n",
-    "print(rel(B, c, x + 1, w_opt, 200, 1e-6)[0])"
+    "print(rel(B, c, x + 1, w_opt, 100, 1e-6)[0])"
    ]
   },
   {
